[tool.poetry]
authors = ["Nat Hillard <nathaniel.k.hillard@eop.omb.gov>"]
description = "Takes output of ENCV api and inputs into DB"
name = "encv_to_db"
version = "0.1.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.3.22"
boto3 = "^1.17.14"
pandas = "^1.2.1"
pybigquery = "^0.5.0"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
python = ">=3.8,<3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
factory-boy = "^3.2.0"
importlib-resources = "^5.1.0"
pyflakes = "^2.2.0"
pylint = "^2.6.0"
pytest = "^6.2.2"
pytest-coverage = "^0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
